syntax = "proto3";

package eventsgrpc;

option go_package = "/events";

service events {
  rpc Push(PsuhRequest) returns (PsuhResponce) {}
  rpc Get(GetRequest) returns (GetResponce) {}
  rpc PushBatch(PushBatchRequest) returns (PushBatchResponce) {}
  rpc GetBatch(GetBatchRequest) returns (GetBatchResponce) {}
}

message evetn {
  string title = 1;
  string description = 2;
  string source = 3;
  int32 status = 4;
  int32 created = 5;
  int32 update = 6;
  string key = 7;
  string key_close = 8;
  string assigned = 9;
  string auto_runner = 10;
  int32 severity = 11;
  string relarion_ci = 12;
  string created_by = 13;
}

message PsuhRequest {
  string user = 1;
  evetn ev = 2;
}

message PsuhResponce { string code = 1; }

message GetRequest {
  string id = 1;
}

message GetResponce {
  string code = 1;
  evetn ev = 2;
}

message PushBatchRequest {
  string user = 1;
  repeated evetn ev = 2;
}

message PushBatchResponce {
  string code = 1;
}

message GetBatchRequest {
 repeated  evetn ev = 1;
}

message GetBatchResponce {
  string code = 1;
  repeated evetn ev = 2;
}

