syntax = "proto3";

package idmgrpc;

option go_package = "/idm";

service events {
  rpc GetSession(GetSessionRequest) returns (GetSessionResponce) {}
  rpc CreationSession(CreationSessionRequest)
      returns (CreationSessionResponce) {}
  rpc DeletionSession(DeletionSessionRequest)
      returns (DeletionSessionResponce) {}
  rpc GetAllSession(GetAllSessionRequest) returns (GetAllSessionResponce) {}

  rpc CreationUser(CreationUserRequest) returns (CreationUserResponce) {}
  rpc DeletionUser(DeletionUserRequest) returns (DeletionUserResponce) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponce) {}
  rpc GetListUserAll(GetListUserAllRequest) returns (GetListUserAllResponce) {}

  rpc Authorization(AuthorizationRequest) returns (AuthorizationResponce);
  rpc Registration(RegistrationRequest) returns (RegistrationResponce);
}

message user {
  string login = 1;
  string firstname = 2;
  string lastname = 3;
  string password = 4;
  int32 created_at = 5;
  int32 profile = 6;
  string source = 7;
}

message session {
  string id = 1;
  string cofig = 2;
  string login = 3;
  int32 duration = 4;
  int32 created = 5;
  string code = 6;
}

message RegistrationRequest { user person = 1; }
message RegistrationResponce {
  session ss = 1;
  user persone = 2;
  string code = 3;
}

message AuthorizationRequest {
  string login = 1;
  string password = 2;
}
message AuthorizationResponce {
  session ss = 1;
  string code = 2;
}

message GetListUserAllRequest { repeated user persons = 1; }
message GetListUserAllResponce {
  string code = 1;
  repeated user persons = 2;
}

message GetUserRequest { user person = 1; }
message GetUserResponce {
  string code = 1;
  user person = 2;
}

message DeletionUserRequest {
  string login = 1;
  string ids = 2;
}
message DeletionUserResponce { string code = 1; }

message CreationUserRequest { user persone = 1; }
message CreationUserResponce { string code = 1; }

message GetAllSessionRequest { repeated user person = 1; }
message GetAllSessionResponce {
  string code = 1;
  repeated session ss = 2;
}

message DeletionSessionRequest {
  string login = 1;
  string id = 2;
}

message DeletionSessionResponce { string code = 1; }

message GetSessionRequest {
  string login = 1;
  string id = 2;
}

message GetSessionResponce {
  string code = 1;
  session ss = 2;
}

message CreationSessionRequest { user person = 1; }

message CreationSessionResponce { string code = 1; }
